unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary__c/pse__Forecast_Enhanced_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedSummaryHelp</customHelpPage>
    <description>Stores the billing forecast records created for a region, practice, or group.</description>
    <label>Billing Forecast Summary</label>
    <nameField>
        <displayFormat>FSummary-{0000}</displayFormat>
        <label>Billing Forecast Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>