unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group for the billing forecast summary.</description>
    <inlineHelpText>The group for the billing forecast summary.</inlineHelpText>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>