unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The practice for the billing forecast summary.</description>
    <inlineHelpText>The practice for the billing forecast summary.</inlineHelpText>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>