unpackaged/main/default/objects/pse__Forecast_Enhanced_Summary__c/fields/pse__Region_Plan__c.field-meta.xml
<CustomField>
    <fullName>pse__Region_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The region plan for the billing forecast.</description>
    <inlineHelpText>The region plan for the billing forecast.</inlineHelpText>
    <label>Region Plan</label>
    <referenceTo>pse__Region_Plan__c</referenceTo>
    <relationshipName>Forecast_Enhanced_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>